Enhance AuthService and EmailService with logging and email functionality; update project dependencies and configuration

--- a/src/DisasterApp.WebApi/appsettings.json
+++ b/src/DisasterApp.WebApi/appsettings.json
@@ -21,12 +21,12 @@
   },
   "Email": {
     "SmtpServer": "smtp.gmail.com",
-    "SmtpPort": 587,
+    "SmtpPort": "587",
     "SenderEmail": "kaungthantlinn789@gmail.com",
     "SenderName": "DisasterWatch Team",
     "Username": "kaungthantlinn789@gmail.com",
     "Password": "baey liea wmkr usfx",
-    "EnableSsl": true
+    "EnableSsl": "true"
   },
   "Logging": {
     "LogLevel": {
