--- a/src/DisasterApp.WebApi/appsettings.json
+++ b/src/DisasterApp.WebApi/appsettings.json
@@ -19,6 +19,14 @@
   "Frontend": {
     "BaseUrl": "http://localhost:5173"
   },
+  "TwoFactor": {
+    "OtpExpiryMinutes": 5,
+    "MaxOtpSendPerHour": 3,
+    "MaxOtpVerifyPerHour": 10,
+    "MaxFailedAttemptsForLockout": 5,
+    "LockoutDurationMinutes": 60,
+    "MaxIpAttemptsPerHour": 20
+  },
   "Email": {
     "SmtpServer": "smtp.gmail.com",
     "SmtpPort": "587",
