Implement ImpactType feature with repository, service, and controller layers

--- a/src/DisasterApp.WebApi/appsettings.json
+++ b/src/DisasterApp.WebApi/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=DESKTOP-QI7FL6I;Database=Disaster;User Id=sa;Password=12345;Encrypt=True;TrustServerCertificate=True;"
+    "DefaultConnection": "Server=DESKTOP-OQOPD5E;Database=Disaster;User ID=sa;Password=12345;"
   },
 
 
