Add SupportRequestSupportType entity and related enums for donation status and type
- Created SupportRequestSupportType entity to manage relationships between support requests and support types.
- Introduced DonationStatus enum to represent the status of donations (Pending, Verified).
- Added DonationType enum to categorize different types of donations (KPay, WavePay, CBPay, BankAccount).
- Updated DisasterDbContextModelSnapshot to reflect new entity and enum additions.

--- a/.gitignore
+++ b/.gitignore
@@ -413,3 +413,5 @@ $RECYCLE.BIN/
 !.vscode/tasks.json
 !.vscode/launch.json
 !.vscode/extensions.json
+src/DisasterApp.Infrastructure/Migrations/20250812083858_InitialCreate.cs
+src/DisasterApp.Infrastructure/Migrations/20250812083858_InitialCreate.Designer.cs
