--- a/.gitignore
+++ b/.gitignore
@@ -415,3 +415,5 @@ $RECYCLE.BIN/
 !.vscode/extensions.json
 src/DisasterApp.Infrastructure/Migrations/20250812083858_InitialCreate.cs
 src/DisasterApp.Infrastructure/Migrations/20250812083858_InitialCreate.Designer.cs
+src/DisasterApp.Infrastructure/Migrations/20250813080927_InitialCreate.cs
+src/DisasterApp.Infrastructure/Migrations/20250813080927_InitialCreate.Designer.cs
