--- a/src/DisasterApp.WebApi/appsettings.json
+++ b/src/DisasterApp.WebApi/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=DESKTOP-OQOPD5E;Database=Disaster;User ID=sa;Password=12345;"
+    "DefaultConnection": "Server=.;Database=Disaster;User Id=sa;Password=12345;TrustServerCertificate=true"
   },
 
 
