--- a/src/DisasterApp.WebApi/appsettings.json
+++ b/src/DisasterApp.WebApi/appsettings.json
@@ -1,6 +1,7 @@
 {
+
   "ConnectionStrings": {
-    "DefaultConnection": "Server=.;Database=Disaster;User ID=sa;Password=sasa@123;TrustServerCertificate=True;"
+    "DefaultConnection": "Server=.;Database=Disaster;User Id=sa;Password=12345;TrustServerCertificate=True;Encrypt=True;"
   },
 
   "Jwt": {
