Enhanced audit system implementation with comprehensive features
- Added advanced audit logging with filtering, export, and retention capabilities
- Implemented AuditDataSanitizer for secure data handling
- Added AuditRetentionService for automated cleanup
- Created specialized audit services for donations and organizations
- Enhanced AuditService with filtering and export functionality
- Added DiagnosticsController for system monitoring
- Implemented ExportService for audit log data export
- Added comprehensive DTOs for audit operations
- Updated tests and configuration files
- Added detailed documentation for the enhanced audit system

--- a/src/DisasterApp.WebApi/appsettings.json
+++ b/src/DisasterApp.WebApi/appsettings.json
@@ -1,7 +1,7 @@
 {
 
   "ConnectionStrings": {
-    "DefaultConnection": "Server=.;Database=Disaster;User Id=sa;Password=12345;TrustServerCertificate=True;Encrypt=True;"
+    "DefaultConnection": "Server=.;Database=Disaster;User Id=sa;Password=sasa@123;TrustServerCertificate=True;Encrypt=True;"
   },
 
   "Jwt": {
