--- a/src/DisasterApp.Application/DisasterApp.Application.csproj
+++ b/src/DisasterApp.Application/DisasterApp.Application.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="CloudinaryDotNet" Version="1.27.6" />
+    <PackageReference Include="FluentValidation" Version="12.0.0" />
     <PackageReference Include="Google.Apis.Auth" Version="1.70.0" />
     <PackageReference Include="iText7" Version="8.0.5" />
     <PackageReference Include="iText7.bouncy-castle-adapter" Version="8.0.5" />
