--- a/src/DisasterApp.Application/DisasterApp.Application.csproj
+++ b/src/DisasterApp.Application/DisasterApp.Application.csproj
@@ -13,6 +13,7 @@
     <PackageReference Include="iText7" Version="8.0.5" />
     <PackageReference Include="iText7.bouncy-castle-adapter" Version="8.0.5" />
     <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
+    <PackageReference Include="Microsoft.AspNetCore.SignalR.Core" Version="1.2.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.7" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="9.0.8" />
     <PackageReference Include="Microsoft.Extensions.Http" Version="9.0.8" />
