Fix build errors and restore missing middleware

--- a/src/DisasterApp.WebApi/appsettings.json
+++ b/src/DisasterApp.WebApi/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=DESKTOP-QI7FL6I;Database=Disaster;User Id=sa;Password=12345;Encrypt=True;TrustServerCertificate=True;"
+    "DefaultConnection": "Server=.;Database=Disaster;User Id=sa;Password=sasa@123;Encrypt=True;TrustServerCertificate=True;"
   },
 
 
@@ -9,7 +9,7 @@
     "Issuer": "DisasterApp",
     "Audience": "DisasterAppUsers",
     "AccessTokenExpirationMinutes": 60,
-    "RefreshTokenExpiratidonDays": 30
+    "RefreshTokenExpirationDays": 30
   },
   "GoogleAuth": {
     "ClientId": "153648153927-208kh1b7vt3tfgid4eec9fsqmln9p2ie.apps.googleusercontent.com",
